--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,11 @@
         <activity
             android:name="com.example.firstapp.MainActivity"
             android:label="@string/app_name" >
-           
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.example.firstapp.OpenTestPane"
@@ -34,9 +38,8 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.firstapp.MainActivity" />
-             <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -50,7 +53,7 @@
         </activity>
          <activity
             android:name="com.example.firstapp.CorrectPane"
-            android:label="@string/title_activity_settings"
+            android:label="@string/results"
             android:parentActivityName="com.example.firstapp.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -58,7 +61,7 @@
         </activity>
          <activity
             android:name="com.example.firstapp.IncorrectPane"
-            android:label="@string/title_activity_settings"
+            android:label="@string/results"
             android:parentActivityName="com.example.firstapp.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -66,7 +69,23 @@
         </activity>
         <activity
             android:name="com.example.firstapp.CBTestPane"
-            android:label="@string/title_activity_settings"
+            android:label="@string/test_path"
+            android:parentActivityName="com.example.firstapp.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.firstapp.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.firstapp.TFTestPane"
+            android:label="@string/test_path"
+            android:parentActivityName="com.example.firstapp.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.firstapp.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.firstapp.RBTestPane"
+            android:label="@string/test_path"
             android:parentActivityName="com.example.firstapp.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
